Setting to jdk10 and reverting to default undertow dependencies